# tinyseoai-cli

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  =22.0.0  BUGFIXES.md  ENV_SETUP_SUMMARY.md  LANGCHAIN_FIX_SUMMARY.md  LICENSE  README.md  RUST_UI_IMPLEMENTATION.md  RUST_UI_QUICKSTART.md  UI_GUIDE.md  UPGRADE_PYTHON.md  coverage.xml  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  structure.md  test_env_config.py  test_integration.py  tinyseoai-ui
.github/workflows/: ci.yml
docs/: AGENTS.md  AGENTS_README.md  COMMANDS.md  Claude.md  QUICK_START.md
reports/competitor.com/: comprehensive_summary.json
reports/example.com/: agent_analysis.json  comprehensive_summary.json  example.com-report.xlsx  summary.json  summary_with_ai.json
reports/google.com/: comprehensive_summary.json
reports/mysite.com/: comprehensive_summary.json
reports/staging.mysite.com/: comprehensive_summary.json
reports/thenewslog.org/: agent_analysis.json  comprehensive_summary.json  summary.json  summary_with_ai.json  thenewslog.org-report.xlsx
reports/yahoo.com/: comprehensive_summary.json  summary.json  summary_with_ai.json
rust-ui/: Cargo.toml
rust-ui/src/: main.rs  ui.rs
scripts/: install_python312.sh
tauri-ui/: index.html  package.json  vite.config.js
tauri-ui/src-tauri/: Cargo.toml  tauri.conf.json
tauri-ui/src-tauri/src/: main.rs
tests/: conftest.py
tests/integration/: test_comprehensive_audit.py  test_multi_agent.py
tests/unit/: test_agent_models.py  test_crawler.py  test_rate_limiter.py  test_robots.py  test_scoring.py
tinyseoai/: cli.py  config.py  exceptions.py
tinyseoai/agents/: __init__.py  base.py  content_quality.py  coordinator.py  fix_generator.py  link_analysis.py  models.py  orchestrator.py  performance.py  prompts.py  technical_seo.py
tinyseoai/ai/: openai_client.py  summarizer.py
tinyseoai/audit/: crawler.py  engine.py  engine_v2.py  parser.py  robots.py
tinyseoai/audit/checks/: content.py  indexability.py  links.py  meta.py  performance.py  security.py
tinyseoai/data/: models.py  scoring.py
tinyseoai/reporting/: excel.py  html_report.py  pdf.py
tinyseoai/reporting/templates/: base.html  report.html
tinyseoai/utils/: io.py  logging.py  rate_limiter.py  url.py
