[package]
name = "tinyseoai-tui"
version = "0.1.0"
edition = "2021"
authors = ["TinySEO AI Team"]
description = "Interactive TUI for TinySEO AI CLI"
license = "MIT"

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
chrono = "0.4"
tui-input = "0.10"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
