[package]
name = "tinyseoai-tauri"
version = "0.1.0"
description = "TinySEO AI - Native Desktop UI"
authors = ["TinySEO AI Team"]
license = "MIT"
repository = "https://github.com/stalyndc/tinyseoai-cli"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
